--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">CONNECT…</string>
     <string name="title_activity_nfcwrite">FullscreenActivity</string>
+    <string name="kakao_app_key">e2eac67aac6e892ec138df0eea30ed41</string>
 </resources>
