Design : Make Request Dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="title_activity_nfcconnect">FullscreenActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">CONNECT…</string>
+    <string name="connect_button">Connect Button</string>
+    <string name="connect_content">CONNECT…</string>
     <string name="title_activity_nfcwrite">FullscreenActivity</string>
     <string name="kakao_app_key">e2eac67aac6e892ec138df0eea30ed41</string>
     <string name="enter_name">Enter name</string>
